# mail-agent-python

./: .env.example  .gitignore  CLAUDE.md  README.md  account_notifier.py  analysis.py  analysis_prompts.py  analysis_text.py  chat.py  draft_cleanup.py  drafts.py  gmail_actions.py  gmail_analyze.py  gmail_auth.py  gmail_client.py  gmail_test.py  inbox_dispatch.py  inbox_pipeline.py  inbox_thread.py  injection_detection.py  pyproject.toml  reply_text.py  requirements.txt  trusted_senders.example.txt  trusted_senders.py
.claude/: settings.json
.claude/hooks/: block-sensitive-reads.py
launchd/: com.jerzy.mail-agent.plist  com.mailagent.gemini.plist
mail_agent/: analysis.py  analysis_schema.py  analysis_text.py  draft_cleanup.py  drafts.py  gmail_client.py  inbox_dispatch.py  inbox_pipeline.py  inbox_thread.py
scripts/: install-launchagent.sh
tests/: prompt_injection_test_emails.txt  test_account_notifier_domains.py  test_draft_cleanup.py  test_gmail_actions.py  test_gmail_analyze_worker.py  test_gmail_client.py  test_html_stripping.py  test_injection_detection.py  test_reply_composition.py  test_schema_validation.py  test_thread_inbox_sync.py  test_trusted_ack_injection.py  test_trusted_mark_read_draft.py
